--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && electron-builder"
+    "build": "vite build && electron-builder"
   },
   "engines": {
     "node": ">=14.17.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.1.0",
+    "dotenv": "^16.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
     "electron": "^19.0.8",
     "electron-builder": "^23.1.0",
+    "prisma": "^4.1.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.13",
     "vite-plugin-electron": "^0.8.1",
@@ -32,6 +37,7 @@
     "rollup",
     "vite",
     "vue3",
-    "vue"
+    "vue",
+    "prisma"
   ]
 }
