--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "electron-vue-vite",
-  "version": "2.0.0",
+  "name": "electron-vue-vite-prisma",
+  "version": "0.1.0",
   "main": "dist/electron/main/index.js",
-  "description": "Really simple Electron + Vue + Vite boilerplate.",
-  "author": "草鞋没号 <308487730@qq.com>",
+  "description": "A boilerplate based on electron-vite-vue & prisma.",
+  "author": "dongivan",
   "license": "MIT",
   "private": true,
   "scripts": {
